syntax = "proto3";
package hooya;

import "hooya.proto";

service Control {
    rpc Version (VersionRequest) returns (VersionReply);
    rpc StreamToFilestore (stream FileChunk) returns (StreamToFilestoreReply);
    rpc TagCid (TagCidRequest) returns (TagCidReply);
    rpc ContentAtCid (ContentAtCidRequest) returns (stream FileChunk);
    rpc ForgetFile (ForgetFileRequest) returns (ForgetFileReply);
}

message VersionRequest { }

message VersionReply {
    uint64 major_version = 1;
    uint64 minor_version = 2;
    uint64 patch_version = 3;
    string pre_version = 4;
}

message FileChunk {
    bytes data = 1;
}

message StreamToFilestoreReply {
    bytes cid = 1;
}

message TagCidRequest {
    bytes cid = 1;
    repeated Tag tags = 2;
}

message TagCidReply {
}

message ContentAtCidRequest {
    bytes cid = 1;
}

message ForgetFileRequest {
    bytes cid = 1;
}

message ForgetFileReply { }
